--- a/frontend/src/frontend/static/css/simple.css
+++ b/frontend/src/frontend/static/css/simple.css
@@ -235,4 +235,8 @@ mark {
         background: #f7f7f7;
         border: 1px solid #ddd;
     }
+
+    body.home {
+        margin-top: 30vh;
+    }
 }
